Réalisation de tout le TD4