@@ -1,13 +1,12 @@
 package Location;
 
-import Characters.Character; // Important : Import de votre classe Character
-import Characters.Gallics.Gallic;
-import java.util.*;
+import Characters.Character;
 import Characters.Roles.ClanChief;
 import Consommable.FoodItem;
-
-import static java.lang.Math.max;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Random;
+import static java.lang.Math.max;
 
 public abstract class Location {
     protected String name;
@@ -27,43 +26,26 @@ public abstract class Location {
     }
 
     //---GETTERS---
-
     public String getName() { return name; }
     public double getArea() { return area; }
     public ClanChief getClanChief() { return clanChief; }
-
-    public int getNumberOfCharactersPresent() {
-        return presentCharacters.size();
-    }
-
-    public List<Character> getPresentCharacters() {
-        return presentCharacters;
-    }
-
-    public List<FoodItem> getPresentFood() {
-        return presentFood;
-    }
+    public List<Character> getPresentCharacters() { return presentCharacters; }
+    public List<FoodItem> getPresentFood() { return presentFood; }
+    public abstract String getType();
+    public int getNumberOfCharactersPresent() { return presentCharacters.size(); }
 
     // --- SETTERS---
-
-    public void setArea(double area) {
-        this.area = max(0, area);
-    }
-    public void setClanChief(ClanChief clanChief) {
-        this.clanChief = clanChief;
-    }
-    public abstract String getType();
-    public void setEnvironment(Environment env) {this.environment = env;}
+    public void setArea(double area) { this.area = max(0, area); }
+    public void setClanChief(ClanChief clanChief) { this.clanChief = clanChief; }
+    public void setEnvironment(Environment env) { this.environment = env; }
 
     // --- METHODS ---
-
-    // Add a character
     public void addCharacter(Character c) {
         this.presentCharacters.add(c);
+        // On évite d'afficher 'this' complet ici pour ne pas boucler
         System.out.println(c.getName() + " entered into " + this.name);
     }
 
-    // Remove a character
     public void removeCharacter(Character c) {
         if (presentCharacters.contains(c)) {
             presentCharacters.remove(c);
@@ -73,80 +55,53 @@ public abstract class Location {
         }
     }
 
-    // Display characteristics
     public void printStatus() {
         System.out.println("\n--- STATUS OF " + name.toUpperCase() + " ---");
         System.out.println("Type: " + getType());
-        System.out.println("Area: " + area + " m²");
-        if (clanChief != null) {
-            System.out.println("Chief: " + clanChief.getName());
-        }
-        System.out.println("Food available: " + presentFood);
+        System.out.println("Food available: " + presentFood); // FoodItem.toString est safe
         System.out.println("Characters present (" + getNumberOfCharactersPresent() + "):");
+        // Ici on appelle Character.toString(), c'est safe tant que Character n'affiche pas Location
         for (Character c : presentCharacters) {
             System.out.println(" - " + c.toString());
         }
         System.out.println("-----------------------------------\n");
     }
 
-    // Heal characters
     public void healAllCharacters() {
         System.out.println("Healing everyone in " + name + "...");
-        for (Character c : presentCharacters) {
-            c.setHealth(100); // Remet la santé à 100
-        }
-        System.out.println("All characters have been healed!");
+        for (Character c : presentCharacters) c.setHealth(100);
     }
 
-    // Feed characters
     public void feedAllCharacters() {
         System.out.println("Feeding time in " + name + "...");
-
         for (Character c : presentCharacters) {
             if (!presentFood.isEmpty()) {
-                String food = String.valueOf(presentFood.removeFirst());
-                c.setHunger(0);
-                System.out.println(c.getName() + " ate " + food + ".");
+                FoodItem food = presentFood.remove(0);
+                c.eat(food); // Utilise la nouvelle méthode eat du TD3 corrigé
             } else {
                 System.out.println("No more food for " + c.getName() + "!");
             }
         }
     }
 
-    @Override
-    public String toString() {
-        return String.format(
-                this.name,
-                this.getType(),
-                this.getNumberOfCharactersPresent()
-        );
-    }
-
-    //APPLIQUER EFFET METEO
     public void applyEnvironmentEffects() {
         if (environment == Environment.NORMAL) return;
-
         System.out.println("\n--- Effets Météo (" + environment + ") ---");
         Random rand = new Random();
-
         for (Character c : presentCharacters) {
-            switch (environment) {
-                case DESERT:
-                    // La chaleur fatigue et affame
-                    c.setHunger(Math.min(100, c.getHunger() + 10));
-                    System.out.println(c.getName() + " souffre de la chaleur (+10 Faim).");
-                    break;
-                case MOUNTAIN:
-                    // 20% de chance de glisser
-                    if (rand.nextInt(5) == 0) {
-                        c.setHealth(Math.max(0, c.getHealth() - 10));
-                        System.out.println("Aïe ! " + c.getName() + " a glissé sur un rocher (-10 Vie).");
-                    }
-                    break;
-                case FOG:
-                    System.out.println(c.getName() + " ne voit pas à 2 mètres dans ce brouillard...");
-                    break;
+            if (environment == Environment.DESERT) {
+                c.setHunger(Math.min(100, c.getHunger() + 10));
+            } else if (environment == Environment.MOUNTAIN && rand.nextInt(5) == 0) {
+                c.setHealth(Math.max(0, c.getHealth() - 10));
+                System.out.println("Aïe ! " + c.getName() + " a glissé (-10 Vie).");
             }
         }
+    }
+
+    // --- C'ÉTAIT ICI L'ERREUR ---
+    // On remplace le String.format cassé par une concaténation simple et sûre
+    @Override
+    public String toString() {
+        return name + " (" + getType() + ") - " + getNumberOfCharactersPresent() + " pers.";
     }
 }
